[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/UI/Fonts/retro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/training_press.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/training.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/round_count.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ScoreDisplay" type="Label" parent="Control"]
margin_left = 249.0
margin_top = 145.0
margin_right = 768.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 1 )
text = "score display"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 469.0
margin_top = 253.0
margin_right = 539.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( -159, -36 )

[node name="letter1" type="Label" parent="Control/HBoxContainer"]
margin_right = 21.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "A"

[node name="letter2" type="Label" parent="Control/HBoxContainer"]
margin_left = 25.0
margin_right = 46.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "B"

[node name="letter3" type="Label" parent="Control/HBoxContainer"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
text = "C"

[node name="Sprite0" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 7.99999, 23 )
scale = Vector2( 0.440001, 0.68 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 33, 23 )
scale = Vector2( 0.439999, 0.68 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 58, 23 )
scale = Vector2( 0.439999, 0.68 )
texture = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
margin_left = 250.0
margin_top = 338.0
margin_right = 754.0
margin_bottom = 422.0

[node name="SubmitScore" type="TextureButton" parent="Control/HBoxContainer2"]
margin_right = 250.0
margin_bottom = 84.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="Control/HBoxContainer2/SubmitScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -22.5
margin_right = 59.0
margin_bottom = 22.5
custom_fonts/font = SubResource( 2 )
text = "SUBMIT"

[node name="Retry" type="TextureButton" parent="Control/HBoxContainer2"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 84.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="Control/HBoxContainer2/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -22.5
margin_right = 52.0
margin_bottom = 22.5
custom_fonts/font = SubResource( 3 )
text = "RETRY"
align = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.5
margin_right = 119.5
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
